tests/NormalTests/paczka1/fuzzy1/28429579.err
Error in line 1: jIMo22M A966 56,0
Error in line 8: jIMo22M A70 11,4
Error in line 25: S622 S284 71,0
Error in line 28: r208Bm5X S622 60,0
